# bnum

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  TODO.txt  build.rs  codecov.yml
.github/workflows/: build-docs.yml  cargo-msrv.yml  check.yml  codecov-report.yml  codecov.yml  publish-dry-run.yml  publish.yml  rust.yml  test.yml
.helix/: languages.toml
bench/: Cargo.toml  open-report.sh
bench/benches/: benchmark.rs  float.rs  misc.rs  uint.rs  unzip.rs
benches/: benchmark.rs  mul.rs
breaking-changes/: v0.5.0
changes/: incorrect-code  prior-bugs.md  v0.11.0  v0.12.0  v0.12.1  v0.13.0  v0.14.0  v0.14.5  v0.15.0  v0.5.0  v0.6.0  v0.7.0  v0.8.0  v0.9.0
int-parser/: Cargo.toml
int-parser/src/: lib.rs
licenses/: LICENSE-rand
lit-parser/: Cargo.toml
lit-parser/src/: lib.rs  main.rs
scripts/: quickcheck_test.sh  quickcheck_test_name.sh  run_all_tests.sh  set_num_tests.sh
src/: arithmetic.rs  bound.rs  cast.rs  digit.rs  digits.rs  digits_old.rs  error.rs  factors.rs  helpers.rs  lib.rs  literal_parse.rs  main.rs  nightly.rs  overflow.rs  prelude.rs  radix_bases.rs  random.rs  sign.rs  test.rs  tryops.rs  types.rs  wide_digits.rs
src/arch/: adc.rs  mod.rs  sbb.rs
src/benchmarks/: mod.rs
src/bint/: bigint_helpers.rs  cast.rs  checked.rs  cmp.rs  const_trait_fillers.rs  consts.rs  convert.rs  endian.rs  fmt.rs  mod.rs  numtraits.rs  ops.rs  overflowing.rs  radix.rs  saturating.rs  strict.rs  unchecked.rs  wrapping.rs
src/buint/: as_float.rs  bigint_helpers.rs  cast.rs  checked.rs  cmp.rs  const_trait_fillers.rs  consts.rs  convert.rs  div.rs  endian.rs  float_as.rs  fmt.rs  mask.rs  mod.rs  mul.rs  numtraits.rs  ops.rs  overflowing.rs  radix.rs  saturating.rs  strict.rs  unchecked.rs  wrapping.rs
src/cast/: mod.rs
src/cast/float/: float_from_uint.rs  mod.rs  uint_from_float.rs
src/doc/: bigint_helpers.rs  checked.rs  classify.rs  cmp.rs  const_trait_fillers.rs  consts.rs  endian.rs  math.rs  mod.rs  overflowing.rs  radix.rs  rounding.rs  saturating.rs  strict.rs  unchecked.rs  wrapping.rs
src/errors/: macros.rs  mod.rs  parseint.rs  tryfrom.rs
src/expr/: mod.rs
src/float/: bytes.rs  cast.rs  classify.rs  cmp.rs  const_trait_fillers.rs  consts.rs  convert.rs  digit.rs  endian.rs  math.rs  mod.rs  numtraits.rs  ops.rs  parse.rs  random.rs  rounding copy.rs  rounding.rs  to_str.rs
src/float/math/: mod.rs  recip.rs  remquof.rs  sqrt.rs
src/float/ops/: add.rs  div.rs  mod.rs  mul.rs  rem.rs  sub.rs
src/float/radix/: from_str.rs  mod.rs
src/float_old/: classify.rs  cmp.rs  consts.rs  convert.rs  math.rs  mod.rs  ops.rs
src/fraction/: mod.rs
src/iint/: cast.rs  checked.rs  cmp.rs  convert.rs  endian.rs  fmt.rs  mod.rs  numtraits.rs  ops.rs  overflow.rs  radix.rs  saturating.rs  tryops.rs  wrapping.rs
src/int/: bigint_helpers.rs  cast.rs  checked.rs  cmp.rs  const_trait_fillers.rs  convert.rs  endian.rs  fmt.rs  mod.rs  numtraits.rs  ops.rs  overflow.rs  overflowing.rs  radix.rs  saturating.rs  strict.rs  unchecked.rs  wrapping.rs
src/int_test/: cast.rs  checked.rs  cmp.rs  convert.rs  endian.rs  fmt.rs  mod.rs  numtraits.rs  ops.rs  overflow.rs  radix.rs  saturating.rs  wrapping.rs
src/integer/: bigint_helpers.rs  bits.rs  bytes.rs  cast.rs  checked.rs  cmp.rs  const_trait_fillers.rs  consts.rs  convert.rs  div.rs  fmt.rs  math.rs  mod.rs  mul.rs  numtraits.rs  ops.rs  overflowing.rs  radix.rs  random.rs  saturating.rs  strict.rs  unchecked.rs  wrapping.rs
src/integer/features/: mod.rs  num_bigint.rs  rug.rs
src/integer/radix/: from_radix.rs  mod.rs  to_radix.rs
src/ints/: bigint_helpers.rs  cast.rs  cmp.rs  convert.rs  endian.rs  fmt.rs  numtraits.rs  ops.rs  strict.rs  unchecked.rs
src/literal_parse/: digits.rs  mod.rs  panic.rs  type_descriptor.rs
src/macros/: mod.rs  panic.rs  type_from_ident.rs  use_types.rs  value_from_literal.rs
src/matrix/: mod.rs
src/test/: bitint.rs  convert.rs  macros.rs  mod.rs  test_float.rs  types.rs
src/uint/: bigint_helpers.rs  bits.rs  bytes.rs  cast.rs  checked.rs  cmp.rs  const_trait_fillers.rs  consts.rs  convert.rs  div.rs  endian.rs  fmt.rs  mask.rs  math.rs  mod.rs  mul.rs  numtraits.rs  ops.rs  overflow.rs  overflowing.rs  radix.rs  radix_bases.rs  saturating.rs  strict.rs  tryops.rs  unchecked.rs  wrapping.rs
src/vector/: mod.rs
