[package]
name = "bnum"
version = "0.14.3"
authors = ["isaac-holt <isaac_holt@icloud.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Arbitrary, fixed size numeric types that extend the functionality of primitive numeric types."
homepage = "https://github.com/isaacholt100/bnum"
documentation = "https://docs.rs/bnum/latest/bnum"
repository = "https://github.com/isaacholt100/bnum"
readme = "README.md"
keywords = ["uint", "int", "bignum", "maths", "arbitrary"]
categories = ["algorithms", "mathematics", "cryptography", "no-std"]
rust-version = "1.87.0"

exclude = ["src/float/*", "src/tests", "TODO.txt"] # TODO: make sure to include these when they are ready

[features]
default = ["alloc"]
# float = []
alloc = []
serde = ["dep:serde", "serde-big-array"]
numtraits = ["num-integer", "num-traits"]
borsh = ["dep:borsh", "alloc"]

[dependencies]
num-integer = { version = "0.1", optional = true, default-features = false }
num-traits = { version = "0.2", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
serde-big-array = { version = "0.5", optional = true, default-features = false }
rand = { version = "0.10", optional = true, default-features = false, features = ["unbiased"] }
arbitrary = { version = "1.3", features = ["derive"], optional = true }
zeroize = { version = "1.6", optional = true, default-features = false }
quickcheck = { version = "1.0", optional = true, default-features = false }
valuable = { version = "0.1", optional = true, features = ["derive"], default-features = false }
borsh = { version = "^1.5", optional = true, default-features = false, features = ["unstable__schema"] }

[dev-dependencies]
quickcheck = "1.0"
paste = "1.0"
rand = { version = "0.10", features = ["unbiased"], default-features = false } # ideally, this would be an optional feature, but since it is used by quickcheck anyway, it does not matter too much

[profile.release]
lto = true # enable link-time optimisation for faster runtime, but slower compile time
opt-level = 3 # maximum optimisation level for faster runtime, but slower compile time

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [lints.rust]
# unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test_int_bits, values("16", "32", "64", "128"))'] }