[package]
name = "bnum_benchmarks"
version = "0.1.0"
authors = ["isaac-holt <isaac_holt@icloud.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
criterion = { version = "0.5" }
bnum = { path = "../", features = ["rand", "nightly"] }
num-traits = "0.2"
uint = "0.9"
rand = { version = "0.8", features = ["std", "std_rng"] }
paste = "1.0"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true # enable link-time optimisation for faster runtime, but slower compile time
opt-level = 3 # maximum optimisation level for faster runtime, but slower compile time